# Ordo

./: .gitignore  APF_PACKAGE_IMPORT.md  APF_PATTERN_CLASSIFICATION_MATRIX.csv  APF_PATTERN_CLASSIFICATION_MATRIX.md  APF_RC_STANDARD_MODULE_STATUS.md  CHANGELOG.md  CHANGE_BUNDLE_MANIFEST.json  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMPANION_UTILITY_WORKFLOW.md  CONSOLIDATED_BACKLOG.md  CONTRIBUTING.md  CURRENT_MATURITY_STATE.md  DELIVERY_POLICY.md  DEVELOPER_BUNDLE_README.md  FINAL_PACKAGE_SELF_CHECK_REPORT.json  FINAL_PACKAGE_SELF_CHECK_REPORT.md  GOVERNANCE.md  LANGUAGE_POLICY.md  LICENSE.md  NOTICE.md  PATCH_README.md  PRE_RELEASE_HISTORY_EVENT_CLEAN_CHECK.json  PRE_RELEASE_STATUS.json  PRE_RELEASE_STATUS.md  README.md  README_CURRENT_PACKAGE_UK.md  README_LICENSE_SECTION.md  RELEASE_INTEGRITY_POLICY.md  RELEASE_MANIFEST_M83_0.json  SECURITY.md  SELF_CHECK_REPAIR_2_PROMPT_REGISTRY_DOCS_ALIGNMENT_REPORT.json  SELF_CHECK_REPAIR_4_RUNTIME_PROMPT_LIMIT_TEST_ISOLATION_REPORT.json  SELF_CHECK_STEP_3_FULL_TEST_SUITE_DURATION_REPORT.md  SHA256SUMS.txt  STABLE_DEVELOPER_HANDOFF.md  STABLE_PACKAGE_INDEX.md  START_PROMPT_DEVELOPER_MODE.md  SUPPORT.md  (+5 more)
cli/: CHANGELOG.md  README.md  RUNTIME_ENTRY.md  pyproject.toml
cli/docs/: APF_SESSION_PACKAGE_CACHE.md  CI_RELEASE_CLEAN_GATE_DESIGN.md  CI_RELEASE_FIXTURE_SMOKE_TEST_MATRIX.md  CI_RELEASE_GATE_POLICY_MATRIX.md  CI_WORKFLOW_IMPLEMENTATION.md  CLEAN_CHECK_COMMAND.md  CLEAN_CHECK_FIXTURE_MATRIX.md  CLEAN_CHECK_HARDENING_PLAN.md  CLEAN_GATE_EVIDENCE_PROVENANCE_LINKAGE.md  CLI_HELPER_COMMANDS_M29.md  CLI_WORKFLOW.md  (+28 more)
(+2985 files in other folders)
